# logs-parser

./: Cargo.toml  Dioxus.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  debug_run.sh  logs-parser-wrapper.sh  run_desktop.sh  test_logs.sh  test_terminal.sh  try_terminal.sh
.github/workflows/: release.yml  warm-cache.yml
docs/plans/: 2026-02-17-dioxus-desktop-app.md  2026-02-17-heroku-streaming-design.md  2026-02-17-heroku-streaming-implementation.md  2026-02-18-complete-heroku-streaming.md  2026-02-18-homebrew-cask-distribution-design.md  2026-02-18-homebrew-cask-distribution.md  2026-02-18-theme-switcher-design.md  2026-02-18-theme-switcher.md  2026-02-27-remove-cli-design.md  2026-02-27-remove-cli.md  2026-02-27-versioning-brew-design.md  2026-02-27-versioning-brew.md  2026-03-02-loading-progress-design.md
examples/: simple_test.rs
src/: app.rs  buffer.rs  events.rs  export.rs  filters.rs  lib.rs  main.rs  parser.rs  ui.rs
src/desktop/: export.rs  filters.rs  heroku_cli.rs  log_reader.rs  main.rs  mod.rs  parser.rs  state.rs  stream_manager.rs  styles.css
src/desktop/components/: connection_panel.rs  custom_select.rs  filter_bar.rs  log_view.rs  mod.rs  stats_header.rs  status_indicator.rs
