[package]
name = "logs-parser"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "logs-parser-desktop"
path = "src/desktop/main.rs"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-desktop = "0.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1"
chrono = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
